# OpenGLsphere

./: CMakeLists.txt
include/: Camera.h  Mesh.h  Primitives.h  Shader.h
shaders/: fragment.frag  vertex.vert
src/: Camera.cpp  Mesh.cpp  Shader.cpp  main.cpp
